--- a/statics/css/librairy/palette.less
+++ b/statics/css/librairy/palette.less
@@ -2,6 +2,7 @@
 
 
 @lib-bg: #000;      // body background
+@lib-overlay-bg: #000;      // overlay background
 @lib-text: #000;    // body text color
 @lib-links: #919191; // links text color
 @lib-links-hover: #CCC; // links text color
@@ -32,3 +33,8 @@
 @lib-submenu-active-bg: #CBCBCB; // submenu links background when active
 @lib-submenu-active: #000000; // submenu links color when active
 @lib-filter-bar-bg: #666666; // filter-bar background color
+@lib-modal-bg: #666666; // modal window background
+@lib-modal-border: #000; // modal window border
+@lib-modal-inborder: #313131; // modal window border
+@lib-modal-close-cross: #474747; // cross button to close modal window
+@lib-modal-close-cross-hover: #222222; // cross button to close modal windowa when hover
