beginning of modal window.

--- a/statics/css/common/layout.less
+++ b/statics/css/common/layout.less
@@ -93,15 +93,21 @@ section#modal {
     footer {
         padding: 22px;
         //border-top: 1px solid @lib-modal-inborder;
+        div.buttons-wrapper {
+            text-align: center;
+            button {
+                display: inline-block;
+            }
+        }
     }
-    &.max-modal {
+    &.max_modal {
         width: auto;
         margin: 40px;
     }
-    &.small-modal {
+    &.small_modal {
         width: 500px;
     }
-    &.large-modal {
+    &.large_modal {
         width: 900px;
     }
 }
