--- a/statics/partials/librairy/librairy_create_folder.html
+++ b/statics/partials/librairy/librairy_create_folder.html
@@ -1,5 +1,5 @@
 <div ng-controller="librairyCreateFolderCtrl">
     Name: <input ng-model="new_dir.name">
-    Parent: <select ng-model="new_dir.parent" ng-options="item.key as item.value for item in directorys"></select> 
+    Parent: <select ng-model="new_dir.parent" ng-options="item.key as item.value for item in dirsOptions"></select> 
 
 </div>
