--- a/statics/partials/librairy/librairy_create_folder.html
+++ b/statics/partials/librairy/librairy_create_folder.html
@@ -7,14 +7,16 @@
         <ul class="errorlist">
             <li ng-repeat="item in phFolder.errors.name">{{ item }}</li>
         </ul>
-        <input id="id_name" ng-model="new_dir.name">
+        <input id="id_name" ng-model="phFolder.newDir.name">
     </div>
     <div class="field_wrapper">
         <label for="id_parent">Parent:</label>
         <ul class="errorlist">
             <li ng-repeat="item in phFolder.errors.parent">{{ item }}</li>
         </ul>
-        <select id="id_parent" ng-model="new_dir.parent" ng-options="item.key as item.value for item in dirsOptions"></select> 
+        <select id="id_parent" 
+                ng-model="phFolder.newDir.parent" 
+                ng-options="item.key as item.value for item in phFolder.dirsOptions"></select> 
     </div>
 
 </div>
