add a file upload system.

--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -68,7 +68,7 @@
                             ng-click="folders_menu = ! folders_menu"><span class="accessibility">Tab menu</span></a>
                     <ul class="popover"
                         ng-show="folders_menu">
-                        <li><a ui-sref="librairy">Import pictures</a></li>
+                        <li><a ng-click="phUploader.open();folders_menu=false" href="">Import pictures</a></li>
                         <li><a ng-click="phFolder.mkdir();folders_menu=false" href="">New folder</a></li>
                     </ul>
                 <div class="submenu-outframe">
