add multiple files upload support

--- a/statics/partials/librairy/librairy_uploader.html
+++ b/statics/partials/librairy/librairy_uploader.html
@@ -2,6 +2,6 @@
     <p><span id="red"><span class="red">*</span></span> Required fields</p>
     <div class="field_wrapper">
         <label for="id_files">Choose a file: <span class="red"> *</span></label>
-        <input id="id_files" ph-file-model="phUploader.files" type="file">
+        <input id="id_files" ph-file-model="phUploader.files" type="file" multiple>
     </div>
 </div>
