--- a/statics/partials/librairy/librairy_uploader.html
+++ b/statics/partials/librairy/librairy_uploader.html
@@ -1,5 +1,10 @@
 <div ng-controller="librairyUploaderCtrl" id="librairy_uploader">
     <p><span id="red"><span class="red">*</span></span> Required fields</p>
+    <section class="files_previews">
+        <div class="file_preview" ng-repeat="file in phUploader.files">
+            <img src="" ph-file-preview="file" />
+        </div>
+    </section>
     <div class="field_wrapper">
         <label for="id_files">Choose a file: <span class="red"> *</span></label>
         <input id="id_files" ph-file-model="phUploader.files" type="file" multiple>
