add independant array for files in uploader preview area.

--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -400,5 +400,18 @@ body#librairy {
             }
         } // article.thumb
     } // section#content
+    #librairy_uploader {
+        // preview images
+        .file_preview {
+            display: inline-block;
+            width: 150px;
+            height: 150px;
+            border: 1px solid #222;
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+    }
 } // body
 
