--- a/statics/partials/librairy/librairy_uploader.html
+++ b/statics/partials/librairy/librairy_uploader.html
@@ -7,6 +7,6 @@
     </section>
     <div class="field_wrapper">
         <label for="id_files">Choose a file: <span class="red"> *</span></label>
-        <input id="id_files" ph-file-model="phUploader.files" type="file" multiple>
+        <input id="id_files" ph-uploader-file-model="phUploader.files" type="file" multiple>
     </div>
 </div>
