--- a/statics/css/librairy/palette.less
+++ b/statics/css/librairy/palette.less
@@ -38,3 +38,8 @@
 @lib-modal-inborder: #313131; // modal window border
 @lib-modal-close-cross: #474747; // cross button to close modal window
 @lib-modal-close-cross-hover: #222222; // cross button to close modal windowa when hover
+@lib-uploader-preview-area-bg: #505050; // preview area background in uploader
+@lib-uploader-preview-area-bg-hover: #383838; // preview area background in uploader on hover
+@lib-uploader-preview-area-border: #222; // preview area border
+@lib-uploader-file-preview-bg: #383838; // previews img div background
+@lib-uploader-file-preview-border: #222; // priview img div border
