--- a/statics/partials/librairy/librairy_uploader.html
+++ b/statics/partials/librairy/librairy_uploader.html
@@ -1,14 +1,12 @@
 <div ng-controller="librairyUploaderCtrl" id="librairy_uploader">
     <section class="files_previews"
-             ph-drop-file="phUploader.handleFile" 
+             ph-drop-file="handleFile" 
              ph-drop-file-style="dragover"
              title="You can add picture's files here by drag and drop or clicking on 'Add pictures button', then deactivate the ones you don't want to upload and click 'upload' button.">
-        <div class="file_preview" ng-repeat="file in phUploader.files">{{ phUploader.files }}
-            <img src="" ph-file-preview="file" />
-        </div>
+        <div class="file_preview" ng-repeat="file in files"><img src="" ph-file-preview="file" /></div>
         <p class="helper">Drag some pictures here or click "Add pictures" button.</p>
     </section>
     <div class="field_wrapper">
-        <button id="id_files" ph-hidden-file-model="phUploader.handleFile" multiple>Add pictures</button>
+        <button id="id_files" ph-hidden-file-model="handleFile" multiple>Add pictures</button>
     </div>
 </div>
