fix a bug with pictures drag image.

--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -266,9 +266,9 @@ body#librairy {
         }
         // drag image model
         img#dragimage {
-            position: absolute;
-            top: 0px;
-            right: 0px;
+            position: fixed;
+            top: 74px;
+            right: 24px;
             max-width: 150px;
             max-height: 150px;
             border: 3px solid #FFF;
