--- a/statics/css/librairy/layout.less
+++ b/statics/css/librairy/layout.less
@@ -1,7 +1,6 @@
 // Librairy layout
 
 body#librairy {
-    margin: 0 20px 0 20px;
     color: @lib-text;
     background-color: @lib-bg;
 
@@ -402,7 +401,7 @@ body#librairy {
     } // section#content
     #librairy_uploader {
         .field_wrapper {
-            text-align: right;
+            text-align: center;
             button {
                 display: inline-block;
             }
@@ -426,6 +425,7 @@ body#librairy {
         }
         // preview images
         .file_preview {
+            position: relative;
             font-size: 0;
             margin: 3px;
             border-radius: 3px;
@@ -441,6 +441,24 @@ body#librairy {
                 vertical-align: middle;
                 max-width: 100%;
                 max-height: 100%;
+            }
+            &:hover .close {
+                display: block;
+            }
+            .close {
+                display: none;
+                position: absolute;
+                top: 0;
+                right: 0;
+                border-radius: 0 0 0 3px;
+                border: 1px solid @lib-uploader-file-preview-border;
+                border-top: none;
+                border-right: none;
+                background: #444;
+                color: #666;
+                &:hover {
+                    color: #222;
+                }
             }
         }
     }
