add complete tests suite for phFolder service.

--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -69,7 +69,7 @@
                     <ul class="popover"
                         ng-show="folders_menu">
                         <li><a ng-click="phUploader.open();folders_menu=false" href="">Import pictures</a></li>
-                        <li><a ng-click="phFolder.mkdir();folders_menu=false" href="">New folder</a></li>
+                        <li><a ng-click="phFolder.mkDir();folders_menu=false" href="">New folder</a></li>
                     </ul>
                 <div class="submenu-outframe">
                 <div class="submenu-frame">
