--- a/statics/partials/main_nav.html
+++ b/statics/partials/main_nav.html
@@ -3,7 +3,7 @@
         ui-sref="{{ item.state }}"
         ng-class="{selected: page_info.name == item.name}"
         >{{ item.title }}</a></li>
-    <li ng-if="user.is_staff"><a
+    <li ng-if="phUser.user.is_staff"><a
         ui-sref="librairy"
         ng-class="{selected: page_info.name == 'librairy'}"
         >Librairy</a></li>
