--- a/statics/css/common/forms.less
+++ b/statics/css/common/forms.less
@@ -86,4 +86,22 @@ input[type="submit"]:hover, input[type="submit"]:focus, button:hover, button:foc
 }
 
 
+.form-horizontal {
+    //background: green;
+    .clear;
+    margin-bottom: 5px;
+    label, p {
+        text-align: right;
+        margin: 5px 0 0;
+        padding: 0 15px 0 0; 
+        height: 34px;
+        line-height: 34px;
+        vertical-align: middle;
+        //background: red;
+    }
+    p {
+        text-align: left;
+        padding: 0;
+    }
+}
 
