improve login, get back weblog api.

--- a/statics/partials/librairy/librairy_base.html
+++ b/statics/partials/librairy/librairy_base.html
@@ -2,7 +2,7 @@
     <h1 class="accessibility">{{ conf.title }}, {{ conf.subtitle }}</h1>
     <p id="logo">
     <a ng-if="conf.home_page_state" ui-sref="{{ conf.home_page_state }}">
-            <img ng-src="{{ conf.librairy_logo }}" alt="{{ conf.title }}" />
+        <img ng-src="{{ conf.librairy_logo }}" alt="{{ conf.title }}, {{ conf.subtitle }}" />
         </a>
     </p>
     <!-- main navigation menu -->
