--- a/statics/partials/weblog/weblog_base.html
+++ b/statics/partials/weblog/weblog_base.html
@@ -1,18 +1,11 @@
-<body>
 <header role="banner">
     <div id="logo">
-        <a href="/"><img src="/assets/img/phiroom-favicon.png" alt="Phiroom, le CMS des photographes" /></a>
+        <a ui-sref="{{ conf.home_page_state }}">
+            <img src="{{ conf.weblog_logo }}" alt="{{ conf.title }}, {{ conf.subtitle }}" /></a>
     </div>
-    <h1>Phiroom</h1>
-    <h2>Les cms des photographes</h2>
-    <nav role="navigation">
-    <ul id="menu">
-        <li><a href="/portfolios/">Portfolios</a></li>
-        <li><a href="/weblog">Weblog</a></li>
-        <li><a href="/contact/">Contact</a></li>
-        <li><a href="/librairy/">Librairy</a></li>
-        <li><a href="/admin/">Admin</a></li>
-    </ul>
+    <h1>{{ conf.title }}</h1>
+    <h2>{{ conf.subtitle</h2>
+    <nav role="navigation" ng-include="'/assets/partials/main_nav.html'">
     </nav>
 </header>
 
@@ -21,7 +14,4 @@
 <footer role="contentinfo">
     <p id="powered"><a target="_blank" href="http://phiroom.org">Powered by Phiroom</a></p>
 </footer>
-<div id="admin-overlay" ng-show="admin"></div>
-
-</body>
 
