add back weblog list frontend.

--- a/statics/css/controller.less
+++ b/statics/css/controller.less
@@ -64,17 +64,13 @@
 // common layout
 @import '@{base-css}common/layout.less';
 
-// palette
-@import '@{base-css}librairy/palette.less';
-
 
 // layout
 @import '@{base-css}librairy/layout.less';
 
 
-
 // layout
-//@import '@{base-css}weblog/layout.less';
+@import '@{base-css}weblog/layout.less';
 
 // admin
 //@import '@{base-css}weblog/admin.less';
