--- a/statics/partials/weblog/weblog_list.html
+++ b/statics/partials/weblog/weblog_list.html
@@ -1,9 +1,7 @@
 <article class="abstract"
     ng-repeat="post in posts">
     <header>
-    <ul id="admin-links">
-        <li><a  href="">New</a></li>
-    </ul>
+    <p ng-if="phUser.user.is_staff" class="admin-links"><a  href="">New post</a></p>
     <ng-include src="'/assets/partials/weblog/weblog_time.html'"></ng-include>
     <h1><a href="{{ post.pk }}/">{{ post.title }}</a></h1>
     </header>
@@ -11,7 +9,7 @@
     <footer>
         <p><a href="{{ post.pk }}/">Read post</a></p>
     </footer>
-    </article>
+</article>
 <nav id="pagination">
     <a ng-if="prev" id="prev" ng-href="{{ prev }}">Recent posts »</a>
     <a ng-if="next" id="next" ng-href="{{ next }}">« Older posts</a>
